<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:outlineAmbientShadowColor="#00B8D4"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/recordButton"
        android:layout_width="242dp"
        android:layout_height="79dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="#00B8D4"
        android:fontFamily="@font/work_sans_bold"
        android:onClick="onClickRecord"
        android:text="START TRACKING"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/recordButton2"
        android:layout_width="242dp"
        android:layout_height="79dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="160dp"
        android:backgroundTint="#00B8D4"
        android:fontFamily="@font/work_sans_bold"
        android:onClick="onClickPreviousRuns"
        android:text="@string/previous_runs"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:cornerRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/longestDuration"
        android:layout_width="243dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="480dp"
        android:fontFamily="@font/anton"
        android:stateListAnimator="@android:anim/fade_in"
        android:text="@string/intial_time"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/work_sans"
        android:stateListAnimator="@android:anim/fade_in"
        android:text="@string/longest_run"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longestDuration" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="332dp"
        android:fontFamily="@font/work_sans"
        android:stateListAnimator="@android:anim/fade_in"
        android:text="@string/numRuns"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/highestDistance"
        android:layout_width="243dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="368dp"
        android:fontFamily="@font/anton"
        android:stateListAnimator="@android:anim/fade_in"
        android:text="@string/initial_distance"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/work_sans"
        android:stateListAnimator="@android:anim/fade_in"
        android:text="@string/highest_distance"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highestDistance" />

    <TextView
        android:id="@+id/allRuns"
        android:layout_width="243dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="264dp"
        android:fontFamily="@font/anton"
        android:stateListAnimator="@android:anim/fade_in"
        android:text="@string/all_runs"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>